--- a/src/components/TopMenu.scss
+++ b/src/components/TopMenu.scss
@@ -97,7 +97,6 @@
     min-width: 240px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
     z-index: 1000;
-    overflow: hidden;
 
     // Arrow pointing up
     &::before {
